put back index object function